--- a/src/index.html
+++ b/src/index.html
@@ -43,8 +43,9 @@
     <!-- nav -->
     <nav
       class="bg-customBlack/70 px-7 py-3 flex items-center justify-between sticky top-0 h-fit nav"
+      id="nav"
     >
-      <a href="">
+      <a href="index.html">
         <img src="img/logo-white.png" alt="" class="h-11 object-scale-down" />
       </a>
       <!-- desktop menu -->
@@ -53,27 +54,27 @@
       </div>
       <div class="hidden xl:flex items-center text-white">
         <a
-          href=""
+          href="index.html"
           class="p-2 px-3 text-sm border-t-2 border-beeYellow hover:text-beeYellow/95"
           >Home</a
         >
         <a
-          href=""
+          href="#aboutus"
           class="p-2 px-3 text-sm hover:border-t-2 hover:border-beeYellow hover:text-beeYellow/95 active:border-beeYellow"
           >About</a
         >
         <a
-          href=""
+          href="#services"
           class="p-2 px-3 text-sm hover:border-t-2 hover:border-beeYellow hover:text-beeYellow/95 active:border-beeYellow"
           >Services</a
         >
         <a
-          href=""
+          href="#testimonials"
           class="p-2 px-3 text-sm hover:border-t-2 hover:border-beeYellow hover:text-beeYellow/95 active:border-beeYellow"
           >Testimonials</a
         >
         <a
-          href=""
+          href="#contact"
           class="p-2 px-3 text-sm hover:border-t-2 hover:border-beeYellow hover:text-beeYellow/95 active:border-beeYellow"
           >Contact</a
         >
@@ -505,7 +506,7 @@
       <!-- testimonial -->
       <section
         class="bg-[url('./img/testimonials/testimonials-bg.png')] bg-no-repeat bg-cover bg-fixed"
-        id="services"
+        id="testimonials"
       >
         <div class="p-5 py-14 xl:p-20 bg-customBlack/90">
           <h1
