contact us done

--- a/src/index.html
+++ b/src/index.html
@@ -525,6 +525,116 @@
           ></div>
         </div>
       </section>
+
+      <!-- contact -->
+      <section class="py-14 bg-customBlack" id="contact">
+        <h1
+          class="text-center mb-10 text-beeYellow font-bold text-2xl md:text-3xl xl:text-4xl"
+        >
+          Reach Out
+        </h1>
+        <div class="flex items-center justify-center mb-5">
+          <div class="h-0.5 bg-beeYellow/50 w-20 mx-3"></div>
+          <img src="img/bee-with-ring.png" class="mx-2" />
+          <div class="h-0.5 bg-beeYellow/50 w-20 mx-3"></div>
+        </div>
+
+        <div class="p-3 md:p-5 xl:p-10 flex flex-col xl:flex-row items-stretch">
+          <div class="flex-1 p-3 grid grid-cols-1 md:grid-cols-2">
+            <div class="my-4">
+              <h2 class="uppercase font-extrabold mb-3 text-beeYellow">
+                Office Address
+              </h2>
+              <ul class="list-none">
+                <li>Brusubi Phase II, Africell Avenue</li>
+                <li>The Gambia</li>
+              </ul>
+            </div>
+            <div class="my-4">
+              <h2 class="uppercase font-extrabold mb-3 text-beeYellow">
+                Contact Info
+              </h2>
+              <ul class="list-none">
+                <li>Phone : + 220 2511115/ 2611116</li>
+                <li>Email : info@riahbeelaundry.com</li>
+              </ul>
+            </div>
+            <div class="my-4">
+              <h2 class="uppercase font-extrabold mb-3 text-beeYellow">
+                Work Hours
+              </h2>
+              <ul class="list-none">
+                <li>MON-SAT: 09:00 – 18:00</li>
+                <li>SUN: <span class="text-beeYellow">CLOSED</span></li>
+              </ul>
+            </div>
+            <div class="my-4">
+              <h2 class="uppercase font-extrabold mb-3 text-beeYellow">
+                Follow Us
+              </h2>
+              <div class="flex items-center">
+                <a
+                  href=""
+                  class="overflow-hidden rounded-tr-3xl rounded-br-3xl rounded-bl-3xl border border-black p-2 mx-3 bg-beeYellow hover:border-beeYellow hover:bg-customDark text-customDark hover:text-beeYellow transition-colors duration-500"
+                >
+                  <i class="fa-brands fa-facebook text-3xl text-inherit"></i>
+                </a>
+
+                <a
+                  href=""
+                  class="overflow-hidden rounded-tr-3xl rounded-br-3xl rounded-bl-3xl border border-black p-2 mx-3 bg-beeYellow hover:border-beeYellow hover:bg-customDark text-customDark hover:text-beeYellow transition-colors duration-500"
+                >
+                  <i class="fa-brands fa-instagram text-3xl text-inherit"></i>
+                </a>
+
+                <a
+                  href=""
+                  class="overflow-hidden rounded-tr-3xl rounded-br-3xl rounded-bl-3xl border border-black p-2 mx-3 bg-beeYellow hover:border-beeYellow hover:bg-customDark text-customDark hover:text-beeYellow transition-colors duration-500"
+                >
+                  <i class="fa-brands fa-tiktok text-3xl text-inherit"></i>
+                </a>
+
+                <a
+                  href=""
+                  class="overflow-hidden rounded-tr-3xl rounded-br-3xl rounded-bl-3xl border border-black p-2 mx-3 bg-beeYellow hover:border-beeYellow hover:bg-customDark text-customDark hover:text-beeYellow transition-colors duration-500"
+                >
+                  <i class="fa-brands fa-twitter text-3xl text-inherit"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <form class="flex-1">
+            <div class="flex items-center my-2 flex-col lg:flex-row">
+              <input
+                type="text"
+                placeholder="Name"
+                class="bg-customDark p-3 text-gray-400 focus:border-beeYellow outline-none border-b border-gray-50 lg:mr-2 my-3 w-full flex-1"
+              />
+              <input
+                type="text"
+                placeholder="Email"
+                class="bg-customDark p-3 text-gray-400 focus:border-beeYellow outline-none border-b border-gray-50 lg:ml-2 my-3 w-full flex-1"
+              />
+            </div>
+            <textarea
+              placeholder="Message"
+              class="bg-customDark p-3 text-gray-400 focus:border-beeYellow outline-none border-b border-gray-50 h-56 max-h-56 min-h-56 w-full"
+            ></textarea>
+          </form>
+        </div>
+
+        <div class="py-2">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m13!1m8!1m3!1d3881.042492074327!2d-16.721598!3d13.409696!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMTPCsDI0JzM0LjkiTiAxNsKwNDMnMTcuOCJX!5e0!3m2!1sen!2sus!4v1685686347186!5m2!1sen!2sus"
+            class="w-full h-96"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
+        </div>
+      </section>
     </main>
 
     <footer></footer>
