contact us done

--- a/src/index.html
+++ b/src/index.html
@@ -605,6 +605,9 @@
           </div>
 
           <form class="flex-1">
+            <h2 class="uppercase font-extrabold mb-3 text-beeYellow">
+              Leave Us a Message
+            </h2>
             <div class="flex items-center my-2 flex-col lg:flex-row">
               <input
                 type="text"
