our numbers and animated after added

--- a/src/index.html
+++ b/src/index.html
@@ -533,7 +533,9 @@
             <h1 class="font-extrabold text-4xl mb-3">
               <span class="servicesCounter">0</span><span>+</span>
             </h1>
-            <h2 class="font-bold uppercase text-xl text-beeYellow mb-2">
+            <h2
+              class="font-bold uppercase text-lg xl:text-xl text-beeYellow mb-2"
+            >
               SERVICES
             </h2>
           </div>
@@ -544,7 +546,9 @@
               <span class="clientsCounter">0</span><span>+</span>
             </h1>
 
-            <h2 class="font-bold uppercase text-xl text-beeYellow mb-2">
+            <h2
+              class="font-bold uppercase text-lg xl:text-xl text-beeYellow mb-2"
+            >
               SATISFIED CLIENTS
             </h2>
           </div>
@@ -555,7 +559,9 @@
               <span class="deliveredCounter">0</span><span>+</span>
             </h1>
 
-            <h2 class="font-bold uppercase text-xl text-beeYellow mb-2">
+            <h2
+              class="font-bold uppercase text-lg xl:text-xl text-beeYellow mb-2"
+            >
               SERVICES DELIVERED
             </h2>
           </div>
