--- a/src/index.html
+++ b/src/index.html
@@ -508,8 +508,8 @@
       </section>
     </main>
 
-    <footer class="flex items-center justify-center text-gray-300 p-3">
-      <p>
+    <footer class="flex items-center justify-center p-3">
+      <p class="text-sm xl:text-lg text-gray-300">
         Copyright &copy; <span class="footerDate"></span>
         <a href="" class="text-beeYellow underline">Fa2Bee Inc.</a> All rights
         reserved.
