--- a/src/index.html
+++ b/src/index.html
@@ -508,7 +508,7 @@
       </section>
     </main>
 
-    <footer class="flex items-center justify-center p-3">
+    <footer class="flex items-center justify-center text-center p-3">
       <p class="text-sm xl:text-lg text-gray-300">
         Copyright &copy; <span class="footerDate"></span>
         <a href="" class="text-beeYellow underline">Fa2Bee Inc.</a> All rights
