--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
   <body>
     <!-- nav -->
     <nav
-      class="bg-customBlack/70 px-7 py-3 flex items-center justify-between sticky top-0 h-fit nav"
+      class="bg-customBlack/80 px-7 py-3 flex items-center justify-between sticky top-0 h-fit nav"
       id="nav"
     >
       <a href="index.html">
@@ -55,7 +55,7 @@
       <div class="hidden xl:flex items-center text-white">
         <a
           href="index.html"
-          class="p-2 px-3 text-sm border-t-2 border-beeYellow hover:text-beeYellow/95"
+          class="p-2 px-3 text-sm hover:border-t-2 hover:border-beeYellow hover:text-beeYellow/95"
           >Home</a
         >
         <a
@@ -200,7 +200,12 @@
       </div>
 
       <!-- about us -->
-      <section class="p-5 py-14 xl:p-20" id="aboutus">
+      <section
+        data-te-spy="scroll"
+        data-te-target="#aboutus"
+        class="p-5 py-14 xl:p-20"
+        id="aboutus"
+      >
         <h1
           class="text-center mb-7 text-beeYellow font-bold text-2xl md:text-3xl xl:text-4xl"
         >
@@ -216,26 +221,30 @@
           class="about-carousel owl-carousel owl-theme w-full lg:11/12 xl:w-9/12 h-fit mx-auto overflow-hidden bg-customBlack shadow-lg shadow-black/30"
         >
           <div class="item flex flex-col lg:flex-row lg:items-stretch">
-            <div class="w-full lg:w-1/2 h-64 md:h-72 lg:h-96">
+            <div class="w-full lg:w-2/5 h-64 lg:h-80">
               <a href="" class="h-full w-full">
                 <img
-                  src="img/banner/fa2bee-logo-banner.png"
-                  class="w-full h-full object-cover"
+                  src="img/logo-white.png"
+                  class="w-full h-full object-scale-down"
                 />
               </a>
             </div>
             <div class="flex-1 p-5">
-              <h2 class="text-2xl font-extrabold mb-2">Fa2Bee Inc.</h2>
-              <p class="font-light text-sm lg:text-lg my-5">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Similique harum totam officiis dolor veritatis tempore nulla?
-                Ipsam saepe, id esse officia at nesciunt architecto atque?
+              <h2 class="text-2xl font-extrabold mb-2 text-beeYellow">
+                Fa2Bee Inc.
+              </h2>
+              <p class="font-light my-5">
+                Fa2Bee Inc. is a vibrant and innovative company that offers a
+                range of services to meet your needs. Whether it's our
+                meticulous cleaning service, creative kids salon, or convenient
+                laundry solutions, we are committed to providing top-notch
+                quality, reliability, and customer satisfaction.
               </p>
-              <p class="font-light text-sm lg:text-lg my-5">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non
-                enim eius aspernatur consectetur quisquam accusamus earum at
-                consequuntur, sunt similique perferendis ut itaque explicabo
-                quidem.
+              <p class="font-light my-5">
+                At Fa2Bee Inc., we value your time and strive to make your life
+                easier, leaving you with more time to focus on what matters
+                most. Join us and discover the convenience, style, and
+                excellence that Fa2Bee Inc. brings to your everyday life.
               </p>
 
               <a
@@ -249,26 +258,31 @@
             </div>
           </div>
           <div class="item flex flex-col lg:flex-row lg:items-stretch">
-            <div class="w-full lg:w-1/2 h-64 md:h-72 lg:h-96">
+            <div class="w-full lg:w-2/5 h-64 lg:h-80">
               <a href="" class="h-full w-full">
                 <img
-                  src="img/fatou-b/fa2bee.png"
-                  class="w-full h-full object-cover"
+                  src="img/fatou-b/keeping-warm-no-bg.png"
+                  class="w-full h-full object-scale-down"
                 />
               </a>
             </div>
             <div class="flex-1 p-5">
-              <h2 class="text-2xl font-extrabold mb-2">Fatou B Ceesay</h2>
-              <p class="font-light text-sm lg:text-lg my-5">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Similique harum totam officiis dolor veritatis tempore nulla?
-                Ipsam saepe, id esse officia at nesciunt architecto atque?
+              <h2 class="text-2xl font-extrabold mb-2 text-beeYellow">
+                Fatou B Ceesay
+              </h2>
+              <p class="font-light my-5">
+                From humble beginnings in The Gambia, Fatou B Ceesay has defied
+                the odds to become a successful and inspiring entrepreneur. With
+                a strong business acumen and creative vision, she has
+                established a range of ventures, including a salon, cleaning
+                business, and doll line.
               </p>
-              <p class="font-light text-sm lg:text-lg my-5">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non
-                enim eius aspernatur consectetur quisquam accusamus earum at
-                consequuntur, sunt similique perferendis ut itaque explicabo
-                quidem.
+              <p class="font-light my-5">
+                Through her dedication to empowerment and representation,
+                particularly for black children, Fatou has left an indelible
+                mark on the global business stage. Her story of resilience and
+                triumph is a testament to the power of determination and the
+                limitless possibilities of entrepreneurship.
               </p>
 
               <a
